tests/snapshots/run_wpt_conformance__coreml_prelu_float16_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float16 2D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { tensor<fp32, [?]>, tensor<fp16, [?]> }; got tensor<fp16, [4, 6]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f16[4, 6];
  }

  consts {
    operand_1: f16[4, 6] @bytes([172, 72, 123, 52, 158, 196, 123, 60, 188, 189, 81, 194, 74, 198, 3, 197, 230, 198, 37, 67, 221, 70, 217, 191, 149, 68, 84, 65, 153, 72, 199, 200, 129, 197, 201, 192, 42, 67, 165, 192, 237, 191, 40, 68, 51, 191, 166, 72]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
