tests/snapshots/run_wpt_conformance__coreml_prelu_float16_broadcast_4D_x_2D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float16 broadcast 4D x 2D slope, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { tensor<fp32, [?]>, tensor<fp16, [?]> }; got tensor<fp16, [2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f16[2, 2, 2, 3];
  }

  consts {
    operand_1: f16[2, 3] @bytes([224, 68, 64, 200, 186, 60, 254, 200, 109, 196, 168, 198]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
